# whyframe

./: .gitignore  README.md  TODO.md  config.example.yaml  pyproject.toml  requirements.txt  test-config.yaml
src/: __init__.py  cli.py
src/core/: config.py
src/pipeline/: embeddings.py  indexer.py  search.py
src/whyframe/: __main__.py  cli.py  setup.py
src/whyframe.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
src/whyframe/attribution/: engine.py
src/whyframe/core/: config.py  git_parser.py
src/whyframe/pipeline/: indexer.py
tests/unit/: test_git_parser.py  test_setup.py
